flux/2/kyverno-policies/envoy-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: envoy-gateway-system
  annotations:
    linkerd.io/inject: enabled
