flux/2/kyverno-policies/except-linkerd-proxy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kyverno-policies
