flux/2/kyverno-policies/limited-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: limited-services
  annotations:
    linkerd.io/inject: enabled
